style(infographic): gap fix post style overwrite with tailwind reset

--- a/app/ecommerce/components/home/_infographic.scss
+++ b/app/ecommerce/components/home/_infographic.scss
@@ -63,6 +63,9 @@
     overflow: clip;
   }
   &__article {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
     @media (width < 800px) {
       z-index: 1;
       color: white;
@@ -108,6 +111,9 @@
     display: none;
   }
   &__article {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
     & h2 {
       @include m.ecoSectionHeader;
     }
